--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="email"></div>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
